fixed limited bundle clipping

--- a/Project/CSS/styles.css
+++ b/Project/CSS/styles.css
@@ -1104,6 +1104,7 @@ background-image: url(https://i.pinimg.com/736x/b2/60/94/b26094970505bcd59c2e5fe
   transition: transform 0.2s ease;
 }
 
+
 .product-info {
   padding: 1rem;
   color: var(--text-color-1);
@@ -1148,9 +1149,9 @@ background-image: url(https://i.pinimg.com/736x/b2/60/94/b26094970505bcd59c2e5fe
 
 .product-image-limited {
   width: 100%;
-  max-width: clamp(25rem, 40vw, 40rem);
+  max-width: clamp(30rem, 40vw, 45rem);
   height: auto;
-  object-fit: cover;
+  object-fit: contain;
   display: block;
   margin-inline: auto;
 }
